@@ -61,6 +61,7 @@ store_epics = calib_repeat
 #    key filtering    -  for example, include only ndarrays with a given key string
 #    calibration      -  do not translate original xtc if a calibrated version is found
 #    eventkey filtering -very fine control over filtering - specify type,src and key
+#    event src filtering - on a per event basis, filter all DAQ data associated with a src
 #
 # Type filtering is based on sets of Psana data types. If you know what detectors or 
 # devices to filter, leave type filtering alone and go to src_filter. 
@@ -92,6 +93,7 @@ AnalogInput = include          # Psana::Bld::BldDataAnalogInputV1
 Andor = include                # Psana::Andor::ConfigV1, Psana::Andor::ConfigV2, Psana::Andor::FrameV1
 Andor3d = include              # Psana::Andor3d::ConfigV1, Psana::Andor3d::FrameV1
 Arraychar = include            # Psana::Arraychar::DataV1
+BeamMonitorBld = include       # Psana::Bld::BldDataBeamMonitorV1
 Control = include              # Psana::ControlData::ConfigV1, Psana::ControlData::ConfigV2, Psana::ControlData::ConfigV3
 Cspad = include                # Psana::CsPad::ConfigV1, Psana::CsPad::ConfigV2, Psana::CsPad::ConfigV3, Psana::CsPad::ConfigV4, Psana::CsPad::ConfigV5, Psana::CsPad::DataV1, Psana::CsPad::DataV2
 Cspad2x2 = include             # Psana::CsPad2x2::ConfigV1, Psana::CsPad2x2::ConfigV2, Psana::CsPad2x2::ElementV1
@@ -135,6 +137,7 @@ Rayonix = include              # Psana::Rayonix::ConfigV1, Psana::Rayonix::Confi
 SharedAcqADC = include         # Psana::Bld::BldDataAcqADCV1
 SharedIpimb = include          # Psana::Bld::BldDataIpimbV0, Psana::Bld::BldDataIpimbV1
 SharedPim = include            # Psana::Bld::BldDataPimV1
+SharedUsdUsb = include         # Psana::Bld::BldDataUsdUsbV1
 Spectrometer = include         # Psana::Bld::BldDataSpectrometerV0, Psana::Bld::BldDataSpectrometerV1
 TM6740 = include               # Psana::Pulnix::TM6740ConfigV1, Psana::Pulnix::TM6740ConfigV2
 TimeTool = include             # Psana::TimeTool::ConfigV1, Psana::TimeTool::ConfigV2, Psana::TimeTool::DataV1, Psana::TimeTool::DataV2
@@ -238,6 +241,26 @@ type_filter = include all
 #
 
 src_filter = include all
+
+  
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# EVENT SRC FILTERING
+#
+# event src filtering is a mechanism to filter the DAQ data for a src
+# on a per event basis. It is not an option one would set in the psana
+# config file, rather it is something that downstream psana modules would
+# do. They put an key in the event that has the source they want to filter
+# and a keystring that starts with "src_do_not_translate"
+# for example, from a python module
+#
+#   evt.put(str(""), src, "src_do_not_translate")
+#
+# where src is a pds src, perhaps obtained from another key in the event.
+# note - this will filter all data associated with that src that does not
+# have a keystring with it. The typical use is to transform DAQ data into
+# ndarrays or some other type, but still associate the transformed data
+# with the original src. As long as the transformed data has a nonzero key string
+# it will not be filtered by the above.
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # CALIBRATION FILTERING
